made major changes to the UI

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />   
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="google-adsense-account" content="ca-pub-3366410135385089">
-    <title>penned</title>
+    <meta name="google-adsense-account" content="ca-pub-3366410135385089" />
+    <title>PENNED</title>
   </head>
   <body>
     <div id="root"></div>
